--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 @import "shadcn/tailwind.css";
+@source "../node_modules/streamdown/dist/*.js";
+@import "streamdown/styles.css";
 
 @custom-variant dark (&:is(.dark *));
 
